--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -5,18 +5,19 @@
     android:id="@+id/nav_graph"
     app:startDestination="@id/fragment_games">
 
-    <activity
+    <!--<activity
         android:id="@+id/activityMain"
         android:name="com.example.servergames.MainActivity"
         android:label="RoomsFragment"
         tools:layout="@layout/activity_main">
 
-    </activity>
+    </activity>-->
 
     <fragment
         android:id="@+id/fragment_games"
         android:name="com.example.servergames.View.GamesFragment"
-        android:label="GamesFragment">
+        android:label="GamesFragment"
+        tools:layout="@layout/fragment_games">
 
 
     </fragment>
