--- a/app/src/main/res/layout/content_layout.xml
+++ b/app/src/main/res/layout/content_layout.xml
@@ -41,5 +41,26 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
 
+        <TextView
+            android:id="@+id/idTv"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="id"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvContent"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="10dp"/>
+
+        <CheckBox
+            android:id="@+id/checkBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:text="Понравилось"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/idTv" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
