--- a/app/src/main/res/layout/game_element.xml
+++ b/app/src/main/res/layout/game_element.xml
@@ -25,6 +25,12 @@
                 android:layout_marginTop="20dp"
                 tools:srcCompat="@tools:sample/avatars" />
 
+            <TextView
+                android:id="@+id/idTv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="TextView" />
+
             <RadioButton
                 android:id="@+id/rButton2"
                 android:layout_width="match_parent"
