--- a/app/src/main/res/layout/game_element.xml
+++ b/app/src/main/res/layout/game_element.xml
@@ -19,8 +19,8 @@
 
             <ImageView
                 android:id="@+id/gameImageView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="319dp"
+                android:layout_height="306dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="20dp"
                 tools:srcCompat="@tools:sample/avatars" />
